--- a/index.html
+++ b/index.html
@@ -34,16 +34,7 @@
 <li>Navigate throught days on swipe in DetailsView (in progress)</li>
 </ul>
 
-<p>Previous capabilities (from <a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>):</p>
-
-<ul>
-<li>Next/Previous month buttons</li>
-<li>Ability to provide converters to color day number or date cell background</li>
-<li>Ability to select a date and apply background color</li>
-<li>Data binding to SelectedDate</li>
-<li>Support for context menu from Silverlight toolkit (new in 1.1)</li>
-<li>Explicit refresh and source of dates</li>
-</ul>
+<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG?raw=true" alt=""></p>
 
 <p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG" alt="Windows Phone 8 Calendar Control - Main View"></p>
 
@@ -56,6 +47,17 @@
 <p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar5.PNG" alt="Windows Phone 8 Calendar Control - Main View - Add new Event"></p>
 
 <p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar6.PNG" alt="Windows Phone 8 Calendar Control - Add/UpdateView - Add new event"></p>
+
+<p>Previous capabilities (from <a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>):</p>
+
+<ul>
+<li>Next/Previous month buttons</li>
+<li>Ability to provide converters to color day number or date cell background</li>
+<li>Ability to select a date and apply background color</li>
+<li>Data binding to SelectedDate</li>
+<li>Support for context menu from Silverlight toolkit (new in 1.1)</li>
+<li>Explicit refresh and source of dates</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/agzagrean/MyCalendar">Mycalendar</a> is maintained by <a href="https://github.com/agzagrean">agzagrean</a>.</span>
