Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,19 +34,12 @@
 <li>Navigate throught days on swipe in DetailsView (in progress)</li>
 </ul>
 
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG?raw=true" alt=""></p>
-
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG" alt="Windows Phone 8 Calendar Control - Main View"></p>
-
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar2.PNG" alt="Windows Phone 8 Calendar Control - Day View"></p>
-
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar3.PNG" alt="Windows Phone 8 Calendar Control - Edit/Delete View"></p>
-
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar4.PNG" alt="Windows Phone 8 Calendar Control - Update View"></p>
-
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar5.PNG" alt="Windows Phone 8 Calendar Control - Main View - Add new Event"></p>
-
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar6.PNG" alt="Windows Phone 8 Calendar Control - Add/UpdateView - Add new event"></p>
+<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar2.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar3.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Edit/Delete View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar4.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Update View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar5.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Main View - Add new Event">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar6.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Add/UpdateView - Add new event"></p>
 
 <p>Previous capabilities (from <a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>):</p>
 
