--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 <li>Navigate throught days on swipe in DetailsView (in progress)</li>
 </ul>
 
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
-<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar2.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
+<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View"></p>
+
+<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar2.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
 <img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar3.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Edit/Delete View">
 <img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar4.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Update View">
 <img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar5.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Main View - Add new Event">
