Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li>Displaying events in Calendar and Day Details</li>
 <li>Backround cell dinamically constructed based on events/day </li>
 <li>Explicit refresh of detail view </li>
-<li>Display day details: events' details per day &amp; hour </li>
+<li>Display day details: events' details per day &amp; hour (in progress)</li>
 <li>Edit/Add/Update/Delete events (in progress)</li>
 <li>Navigate throught days on swipe in DetailsView (in progress)</li>
 </ul>
