Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </ul>
       </header>
       <section>
-        <p>WPCalendar - a Windows Phone  8 calendar -- work in progress</p>
+        <p>*<em>MyCalendar *</em></p>
+
+<ul>
+<li>a Windows Phone  8 custom calendar (in progress)</li>
+</ul>
 
 <p>WPCalendar is a  Windows Phone 8 calendar control based on the WPControl build by Sergey Barskiy (<a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>)</p>
 
@@ -43,12 +47,12 @@
 <li>Navigate throught days on swipe in DetailsView (in progress)</li>
 </ul>
 
-<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar1.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
-<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar2.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
-<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar3.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Edit/Delete View">
-<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar4.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Update View">
-<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar5.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Main View - Add new Event">
-<img src="https://github.com/agzagrean/MyCalendar/blob/master/calendar6.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Add/UpdateView - Add new event"></p>
+<p><img src="https://github.com/agzagrean/MyCalendar/blob/master/Screenshots/calendar1.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Calendar View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/Screenshots/calendar2.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Day View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/Screenshots/calendar3.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Edit/Delete View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/Screenshots/calendar4.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Update View">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/Screenshots/calendar5.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Main View - Add new Event">
+<img src="https://github.com/agzagrean/MyCalendar/blob/master/Screenshots/calendar6.PNG?raw=true" alt="Windows Phone 8 Calendar Control - Add/UpdateView - Add new event"></p>
 
 <p>Previous capabilities (from <a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>):</p>
 
