Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </ul>
       </header>
       <section>
-        <p>*<em>MyCalendar *</em></p>
+        <h1>
+<a id="mycalendar" class="anchor" href="#mycalendar" aria-hidden="true"><span class="octicon octicon-link"></span></a>MyCalendar</h1>
 
 <ul>
 <li>a Windows Phone  8 custom calendar (in progress)</li>
