Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       </header>
       <section>
         <h1>
-<a id="mycalendar----a-windows-phone--8-custom-calendar-in-progress" class="anchor" href="#mycalendar----a-windows-phone--8-custom-calendar-in-progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>MyCalendar ### - a Windows Phone  8 custom calendar (in progress)</h1>
+<a id="mycalendar" class="anchor" href="#mycalendar" aria-hidden="true"><span class="octicon octicon-link"></span></a>MyCalendar</h1>
+
+<p>A simple Windows Phone  8 calendar control (in progress)</p>
 
 <p>WPCalendar is a  Windows Phone 8 calendar control based on the WPControl build by Sergey Barskiy (<a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>)</p>
 
