Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <h1>
 <a id="mycalendar" class="anchor" href="#mycalendar" aria-hidden="true"><span class="octicon octicon-link"></span></a>MyCalendar</h1>
 
-<p>A simple Windows Phone  8 calendar control (in progress)</p>
+<h3>
+<a id="clean-windows-phone-8-custom-calendar-control" class="anchor" href="#clean-windows-phone-8-custom-calendar-control" aria-hidden="true"><span class="octicon octicon-link"></span></a>Clean Windows Phone 8 custom calendar control</h3>
 
 <p>WPCalendar is a  Windows Phone 8 calendar control based on the WPControl build by Sergey Barskiy (<a href="http://wpcontrols.codeplex.com/">http://wpcontrols.codeplex.com/</a>)</p>
 
